[tool.poetry]
name = "linkson"
version = "0.1.0"
description = "Link to json"
authors = ["zhufree <zhufree2013@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.22.0"
pyquery = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
